apps/monitoring-checkmk-server/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkmk
  labels:
    app: checkmk
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: checkmk
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: checkmk
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
      containers:
      - name: monitoring
        # https://hub.docker.com/r/checkmk/check-mk-raw/tags
        #image: checkmk/check-mk-raw:2.2.0p44
        image: checkmk/check-mk-raw:2.4.0
        resources:
          requests:
            cpu: 500m
            memory: 1792Mi
        ports:
        - containerPort: 5000
          name: web
        - containerPort: 8000
          name: agent
        - containerPort: 80
          name: http
        #livenessProbe:
        #  httpGet:
        #    path: /cmk/check_mk/login.py
        #    port: 5000
        #  initialDelaySeconds: 180
        #  periodSeconds: 10
        #  timeoutSeconds: 5
        #  failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /cmk/check_mk/login.py
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: sites-volume
          mountPath: /omd/sites
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: checkmk-pre-start-hook
          mountPath: /docker-entrypoint.d/pre-start/prepare.sh
          subPath: prepare.sh
        #- name: tmpfs-volume
        #  mountPath: /opt/omd/sites/cmk/tmp
      volumes:
      - name: sites-volume
        persistentVolumeClaim:
          claimName: checkmk-sites-pvc
      - name: tmpfs-volume
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
      - name: checkmk-pre-start-hook
        configMap:
          name: checkmk-pre-start-hook
          defaultMode: 0755
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
