apps/monitoring-checkmk-server/k8s.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: checkmk-service
spec:
  selector:
    app: checkmk
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: web
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: agent
  - protocol: TCP
    port: 8001
    targetPort: 80
    name: http
  type: ClusterIP
