apps/monitoring-checkmk-server/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: checkmk-ingress
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd,traefik-plugin-redirect-location@kubernetescrd
        #, authelia-forwardauth-authelia@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:rhFxKtsSSQFPSfswnH95WPyX7OU78OHs,iv:aqWJgul9vQJ1q5qaRa23WjnwQwLyVlZkGjbl5g2YPxc=,tag:gV6Z/UeBlpO4zhmyado6wA==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:HZtvPrVvGjOVkH0pcIAkgB6MH8aT3Quv,iv:POoFRA2rZWtF6Vn6Fm3b+riqgSrSSa1itlqucw2wz94=,tag:DHdGVsNqp3h2cf2iTjxFoQ==,type:str]
          http:
            paths:
                - path: /cmk
                  pathType: Prefix
                  backend:
                    service:
                        name: checkmk-service
                        port:
                            number: 5000
                - path: /thruk
                  pathType: Prefix
                  backend:
                    service:
                        name: checkmk-service
                        port:
                            number: 8001
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArcXB3WWxTQThZNFUxUFRx
[...]
            Scy7gS2UIXNDlo3zvUe7uwccYfqYLsfFpjh0eWd+8Ok6y/zrwjcuDg==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTdzNOS3R6bHpkbzBMNmFT
[...]
            A0Zcy4EW4NMUuUo7Z4y+sWyTphrfLSbjk4edWbmUrR3O13vzd+RNOQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-07-16T14:54:48Z"
    mac: ENC[AES256_GCM,data:ZsDMD9TKnjEWM2XMsGCI3bmOBXEnTZo1fOESXN/RddjBxHNfEH6yirxqajCvEFdn0h+f4pLVPociyauR2sB/yOoCrDCvHhCOq6fkIozn0fJ9vKpF2oPafd6TGCoNVxr7URrs05obNbjAHS71HStR9LWKGfeG+ETBp/J9nNis4gs=,iv:NBs8U2un+TInX9jV7vyJhE0I2zinY6mTPuLtg4k55us=,tag:thPm1+50DWW7RHecXetVKA==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
